--- a/views/layouts/front-page.ejs
+++ b/views/layouts/front-page.ejs
@@ -5,28 +5,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%- locals.title %></title>
-    <meta name="viewport" content="<%- locals.description %>" />
-    <!-- boot-strap cdn-->
+    <meta name="description" content="<%- locals.description %>" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <!-- custom styles -->
     <link rel="stylesheet" href="/css/main.css" />
-    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&family=Unbounded:wght@300;700&display=swap"
         rel="stylesheet">
 </head>
 
-<bodyc class="home d-flex flex-column h-100">
+<body class="home d-flex flex-column h-100">
 
     FRONTPAGE LAYOUT
-        <%- include('../partials/header.ejs') %>
-        <%- body %>
-        <%- include('../partials/footer.ejs') %>
+    <%- include('../partials/header.ejs') %>
+    <%- body %>
+    <%- include('../partials/footer.ejs') %>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
