--- a/views/partials/header_dashboard.ejs
+++ b/views/partials/header_dashboard.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
-        <a href="/dashboard"
+        <a href="/"
             class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-primary text-decoration-none fw-bold fs-2">
             Notes
         </a>
@@ -15,4 +15,4 @@
             <a href="/logout" type="button" class="btn btn-outline-primary">Logout</a>
         </div>
     </header>
-</div>
+    </d
