--- a/views/partials/header_dashboard.ejs
+++ b/views/partials/header_dashboard.ejs
@@ -15,4 +15,4 @@
             <a href="/logout" type="button" class="btn btn-outline-primary">Logout</a>
         </div>
     </header>
-    </d
+</div>
